# assist

./: .gitignore  CMakeLists.txt  README.md  a.c  adapter0.py  adapter1.py  adapter2.py  assist.c  assist.h  b.c  compilevision.sh  cv.cpp  cv.py  deep.c  dist.py  distance.cpp  gen.c  gpio.c  gps.c  graph.pbtxt  judge.c  laser_distance.py  laser_host.c  laser_host.cpp  launch_speech.py  main.c  main.cpp  monitor.c  nn.c  nn.h  position.c  position.cpp  proxy.cpp  server.c  spawn.c  speech.cpp  speech.py  test.py  test_laser.cpp  test_speech.cpp  (+7 more)
laser/: laser.ino
servo/: servo.ino
ultrasonic/: ultrasonic.ino
