cmake_minimum_required(VERSION 2.8)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIBRARY_DIRS})
include_directories(/usr/include/libxml2)
add_executable(position position.c )
add_executable(assist main.c)
add_executable(voltage voltage.c)
add_executable(ultrasonic_distance ultrasonic_distance.cpp)
target_link_libraries(position gps curl xml2)
add_custom_target(vision-target ALL DEPENDS vision)
add_executable(speech speech.cpp)
target_link_libraries(speech curl jsoncpp)
add_custom_command(OUTPUT  vision  DEPENDS vision.cpp COMMAND gcc -I/home/nvidia/darknet/include/ -I/home/nvidia/darknet/src/ -DOPENCV `pkg-config --cflags opencv`  -DGPU -I/usr/local/cuda/include/ -DCUDNN  -Wall -Wno-unused-result -Wno-unknown-pragmas -Wfatal-errors -fPIC  -Ofast -DOPENCV -DGPU -DCUDNN vision.cpp /home/nvidia/darknet/src/image_opencv.cpp libdarknet.a -o vision -lm -pthread  `pkg-config --libs opencv` -lstdc++ -L/usr/local/cuda/lib64 -lcuda -lcudart -lcublas -lcurand -lcudnn -lstdc++  libdarknet.a)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
